[package]
name = "FourthChannel"
authors = ["Rhelvetican <bionicvnb@gmail.com>"]
description = ":skull:"
version = "0.2.0"
edition = "2021"

[dependencies]
teloxide = { version = "0.13", features = ["macros"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
rusqlite = { version = "0.31", features = ["bundled", "serde_json"] }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
sha3 = "0.10"
sea-query-rusqlite = { version = "0.6.0", features = ["with-json"] }
sea-query = "0.31.0"
